--- a/app/src/main/res/layout/review_label_item.xml
+++ b/app/src/main/res/layout/review_label_item.xml
@@ -1,8 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    >
+
+<android.support.constraint.ConstraintLayout
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:onClick="toggleReviewDetails">
 
 
     <TextView
@@ -18,7 +24,6 @@
         android:id="@+id/reviewValue"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="0"
         style="@style/TextAppearance.AppCompat.Subhead"
         app:layout_constraintStart_toEndOf="@+id/reviewLabel"
         app:layout_constraintTop_toTopOf="parent" />
@@ -34,3 +39,5 @@
         app:layout_constraintTop_toTopOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
+
+</layout>
