--- a/app/src/main/res/layout-land/activity_movie_detail.xml
+++ b/app/src/main/res/layout-land/activity_movie_detail.xml
@@ -121,52 +121,22 @@
                 app:layout_constraintTop_toBottomOf="@+id/ratingBar"
                 />
 
-            <TextView
-                android:id="@+id/synopsis"
+            <android.support.constraint.Barrier
+                android:id="@+id/barrier2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:text="@string/synopsis"
-                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
-                app:layout_constraintStart_toStartOf="@+id/ratingBar"
-                app:layout_constraintTop_toBottomOf="@+id/barrier1" />
-
-            <TextView
-                android:id="@+id/tv_OverView"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                android:layout_marginTop="@dimen/dimen_8dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@id/guidelineRight"
-                app:layout_constraintStart_toStartOf="@+id/synopsis"
-                app:layout_constraintTop_toBottomOf="@+id/synopsis"
-                app:layout_constraintVertical_bias="0.0"
-            />
+                app:barrierDirection="right"
+                app:constraint_referenced_ids="iv_posterImage"
+                app:layout_constraintStart_toEndOf="@id/iv_posterImage"/>
 
             <include
-                android:id="@+id/reviewLabelContainer"
-                layout="@layout/review_label_item"
+                android:id="@+id/itemDetails"
+                layout="@layout/movie_overview_layout"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                app:layout_constraintTop_toBottomOf="@+id/tv_OverView"
-                app:layout_constraintBottom_toTopOf="@id/authorReviewsList"
-                app:layout_constraintEnd_toStartOf="@id/guidelineRight"
-                app:layout_constraintStart_toStartOf="@+id/synopsis"
-                />
-
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/authorReviewsList"
-                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                tools:layoutManager="android.support.v7.widget.LinearLayoutManager"
-                android:layout_marginTop="16dp"
-                android:isScrollContainer="true"
-                android:nestedScrollingEnabled="false"
-                app:layout_constraintTop_toBottomOf="@+id/reviewLabelContainer"
-                app:layout_constraintStart_toEndOf="@id/synopsis"
-                app:layout_constraintEnd_toEndOf="@id/guidelineRight">
-            </android.support.v7.widget.RecyclerView>
+                app:layout_constraintEnd_toStartOf="@id/guidelineRight"
+                app:layout_constraintStart_toEndOf="@+id/barrier2"
+                app:layout_constraintTop_toBottomOf="@+id/barrier1" />
 
         </android.support.constraint.ConstraintLayout>
 
