--- a/app/src/main/res/layout/movie_overview_layout.xml
+++ b/app/src/main/res/layout/movie_overview_layout.xml
@@ -10,14 +10,14 @@
         android:layout_height="match_parent">
 
         <android.support.constraint.Guideline
-            android:id="@+id/guidelineLeft"
+            android:id="@+id/guidelineLeft2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             app:layout_constraintGuide_begin="16dp" />
 
         <android.support.constraint.Guideline
-            android:id="@+id/guidelineRight"
+            android:id="@+id/guidelineRight2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
@@ -29,7 +29,7 @@
             android:layout_height="wrap_content"
             android:text="Synopsis :"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-            app:layout_constraintStart_toStartOf="@id/guidelineLeft"
+            app:layout_constraintStart_toStartOf="@id/guidelineLeft2"
             app:layout_constraintTop_toTopOf="parent" />
 
         <ScrollView
@@ -37,7 +37,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
+            app:layout_constraintStart_toStartOf="@+id/guidelineLeft2"
             app:layout_constraintTop_toBottomOf="@+id/synopsisLabel">
 
             <TextView
@@ -47,13 +47,13 @@
         </ScrollView>
 
         <android.support.constraint.Barrier
-            android:id="@+id/barrier1"
+            android:id="@+id/barrier2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:barrierDirection="bottom"
             app:constraint_referenced_ids="synopsisLabel,synopsis_ScrollView"
-            app:layout_constraintEnd_toEndOf="@id/guidelineRight"
-            app:layout_constraintStart_toStartOf="@id/guidelineLeft"
+            app:layout_constraintEnd_toEndOf="@id/guidelineRight2"
+            app:layout_constraintStart_toStartOf="@id/guidelineLeft2"
             app:layout_constraintTop_toBottomOf="@id/synopsis_ScrollView" />
 
         <include
@@ -62,9 +62,9 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            app:layout_constraintEnd_toEndOf="@id/guidelineRight"
-            app:layout_constraintStart_toStartOf="@id/guidelineLeft"
-            app:layout_constraintTop_toTopOf="@+id/barrier1" />
+            app:layout_constraintEnd_toEndOf="@id/guidelineRight2"
+            app:layout_constraintStart_toStartOf="@id/guidelineLeft2"
+            app:layout_constraintTop_toTopOf="@+id/barrier2" />
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/authorReviewsList"
@@ -75,9 +75,11 @@
             android:isScrollContainer="true"
             android:nestedScrollingEnabled="false"
             android:visibility="gone"
-            app:layout_constraintEnd_toEndOf="@id/guidelineRight"
-            app:layout_constraintStart_toStartOf="@id/guidelineLeft"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
+            app:layout_constraintEnd_toEndOf="@id/guidelineRight2"
+            app:layout_constraintStart_toStartOf="@id/guidelineLeft2"
             app:layout_constraintTop_toBottomOf="@+id/reviewLabelContainer" />
+
 
     </android.support.constraint.ConstraintLayout>
 
