--- a/app/src/main/res/layout/review_item.xml
+++ b/app/src/main/res/layout/review_item.xml
@@ -8,8 +8,7 @@
 
 <android.support.constraint.ConstraintLayout
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="@dimen/dimen_8dp">
+    android:layout_height="wrap_content">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
@@ -18,6 +17,8 @@
         app:cardCornerRadius="8dp"
         app:cardElevation="6dp"
         app:cardBackgroundColor="@color/colorReviewItem"
+        app:cardUseCompatPadding="true"
+        app:cardPreventCornerOverlap="true"
         app:layout_constraintTop_toBottomOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
