--- a/app/src/main/res/layout/review_label_item.xml
+++ b/app/src/main/res/layout/review_label_item.xml
@@ -8,8 +8,8 @@
 <android.support.constraint.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:focusable="true"
     android:onClick="toggleReviewDetails">
-
 
     <TextView
         android:id="@+id/reviewLabel"
@@ -33,7 +33,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/dimen_8dp"
-        android:src="@drawable/ic_twotone_keyboard_arrow_down_24px"
+        android:src="@drawable/ic_twotone_keyboard_arrow_up_24px"
         app:layout_constraintBottom_toBottomOf="@+id/reviewLabel"
         app:layout_constraintStart_toEndOf="@+id/reviewValue"
         app:layout_constraintTop_toTopOf="parent" />
