fixes-UI details portrait

--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <layout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -10,123 +11,128 @@
         android:fillViewport="true"
         >
 
-        <android.support.constraint.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:minHeight="8dp"
-            tools:context=".ui.MovieDetailActivity">
+<android.support.constraint.ConstraintLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".ui.MovieDetailActivity">
 
-            <ImageView
-                android:id="@+id/iv_backgroundImage"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:adjustViewBounds="true"
-                android:contentDescription="@string/background_image"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+    <android.support.constraint.Guideline
+        android:id="@+id/guidelineLeft"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="16dp" />
 
-            <ImageView
-                android:id="@+id/iv_posterImage"
-                android:layout_width="100dp"
-                android:layout_height="150dp"
-                android:contentDescription="@string/poster_image"
-                app:layout_constraintBottom_toBottomOf="@id/iv_backgroundImage"
-                app:layout_constraintEnd_toEndOf="@id/guidelineRight"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="@id/guidelineLeft"
-                app:layout_constraintTop_toBottomOf="@id/iv_backgroundImage"
-                app:layout_constraintVertical_bias="0.446" />
+    <android.support.constraint.Guideline
+        android:id="@+id/guidelineRight"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_end="16dp" />
 
-            <TextView
-                android:id="@+id/tv_title"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/dimen_8dp"
-                android:layout_marginTop="@dimen/dimen_8dp"
-                android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Title"
-                app:layout_constraintEnd_toStartOf="@+id/like_button"
-                app:layout_constraintStart_toEndOf="@+id/iv_posterImage"
-                app:layout_constraintTop_toBottomOf="@+id/iv_backgroundImage"
-                tools:text="Mad Max" />
+    <ImageView
+        android:id="@+id/iv_backgroundImage"
+        android:layout_width="0dp"
+        android:layout_height="200dp"
+        android:adjustViewBounds="true"
+        android:contentDescription="@string/background_image"
+        android:src="@drawable/background"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-            <com.like.LikeButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:icon_type="heart"
-                app:icon_size="32dp"
-                android:id="@+id/like_button"
-                app:circle_start_color="@color/colorPrimary"
-                app:circle_end_color="@color/colorAccent"
-                app:dots_primary_color="@color/colorAccent"
-                app:dots_secondary_color="@color/colorPrimary"
-                app:liked="false"
-                app:anim_scale_factor="2"
-                app:is_enabled="true"
-                app:layout_constraintTop_toBottomOf="@+id/iv_backgroundImage"
-                app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
-                app:layout_constraintStart_toEndOf="@id/tv_title"
-                />
+    <ImageView
+        android:id="@+id/iv_posterImage"
+        android:layout_width="100dp"
+        android:layout_height="150dp"
+        android:contentDescription="@string/poster_image"
+        android:src="@drawable/poster"
+        app:layout_constraintBottom_toBottomOf="@+id/iv_backgroundImage"
+        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
+        app:layout_constraintTop_toBottomOf="@+id/iv_backgroundImage"
+        app:layout_constraintVertical_bias="0.186" />
 
-            <android.support.constraint.Guideline
-                android:id="@+id/guidelineLeft"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                app:layout_constraintGuide_begin="16dp" />
+    <TextView
+        android:id="@+id/tv_title"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/dimen_8dp"
+        android:layout_marginTop="@dimen/dimen_8dp"
+        android:text="Title"
+        android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Title"
+        app:layout_constraintEnd_toStartOf="@+id/like_button"
+        app:layout_constraintStart_toEndOf="@+id/iv_posterImage"
+        app:layout_constraintTop_toBottomOf="@+id/iv_backgroundImage" />
 
-            <android.support.constraint.Guideline
-                android:id="@+id/guidelineRight"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                app:layout_constraintGuide_end="16dp" />
+    <com.like.LikeButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:icon_type="heart"
+        app:icon_size="32dp"
+        android:id="@+id/like_button"
+        app:circle_start_color="@color/colorPrimary"
+        app:circle_end_color="@color/colorAccent"
+        app:dots_primary_color="@color/colorAccent"
+        app:dots_secondary_color="@color/colorPrimary"
+        app:liked="false"
+        app:anim_scale_factor="2"
+        app:is_enabled="true"
+        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
+        app:layout_constraintTop_toBottomOf="@+id/iv_backgroundImage" />
 
-            <RatingBar
-                android:id="@+id/ratingBar"
-                style="@style/Widget.AppCompat.RatingBar.Small"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/dimen_8dp"
-                android:isIndicator="true"
-                android:numStars="5"
-                android:rating="5"
-                android:stepSize="0.1"
-                app:layout_constraintEnd_toStartOf="@id/guidelineRight"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="@+id/tv_title"
-                app:layout_constraintTop_toBottomOf="@id/tv_title" />
+    <android.support.constraint.Barrier
+        android:id="@+id/barrier1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:barrierDirection="bottom"
+        app:constraint_referenced_ids="tv_title,like_button"
+        app:layout_constraintTop_toBottomOf="@+id/tv_releaseDate"
+        app:layout_constraintStart_toStartOf="@id/iv_posterImage"
+        />
 
-            <TextView
-                android:id="@+id/tv_releaseDate"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                app:layout_constraintBottom_toTopOf="@+id/ratingBar"
-                app:layout_constraintEnd_toStartOf="@id/guidelineRight"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toEndOf="@id/ratingBar"
-                app:layout_constraintTop_toBottomOf="@+id/ratingBar" />
+    <RatingBar
+        android:id="@+id/ratingBar"
+        style="@style/Widget.AppCompat.RatingBar.Small"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/dimen_8dp"
+        android:isIndicator="true"
+        android:numStars="5"
+        android:rating="5"
+        android:stepSize="0.1"
+        app:layout_constraintStart_toStartOf="@+id/tv_title"
+        app:layout_constraintTop_toBottomOf="@+id/tv_title" />
 
-            <android.support.constraint.Barrier
-                android:id="@+id/barrier1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:barrierDirection="bottom"
-                app:constraint_referenced_ids="ratingBar, tv_releaseDate"
-                app:layout_constraintTop_toBottomOf="@+id/ratingBar" />
+    <TextView
+        android:id="@+id/tv_releaseDate"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Sep 15 2008"
+        app:layout_constraintBottom_toTopOf="@+id/ratingBar"
+        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
+        app:layout_constraintTop_toBottomOf="@+id/ratingBar" />
 
-            <include
-                android:id="@+id/itemDetails"
-                layout="@layout/movie_overview_layout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_constraintEnd_toStartOf="@id/guidelineRight"
-                app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
-                app:layout_constraintTop_toBottomOf="@+id/barrier1" />
+    <android.support.constraint.Barrier
+        android:id="@+id/barrier2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:barrierDirection="bottom"
+        app:constraint_referenced_ids="iv_posterImage,ratingBar,tv_releaseDate"
+        app:layout_constraintTop_toBottomOf="@+id/tv_releaseDate"
+        app:layout_constraintStart_toStartOf="parent"
+        />
 
+    <include
+        android:id="@+id/itemDetails"
+        layout="@layout/movie_overview_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
+        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
+        app:layout_constraintTop_toBottomOf="@+id/barrier2" />
 
-        </android.support.constraint.ConstraintLayout>
+</android.support.constraint.ConstraintLayout>
 
     </android.support.v4.widget.NestedScrollView>
 
