--- a/app/src/main/res/layout/movie_overview_layout.xml
+++ b/app/src/main/res/layout/movie_overview_layout.xml
@@ -10,14 +10,14 @@
         android:layout_height="match_parent">
 
         <android.support.constraint.Guideline
-            android:id="@+id/guidelineLeft2"
+            android:id="@+id/guidelineLeft"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             app:layout_constraintGuide_begin="16dp" />
 
         <android.support.constraint.Guideline
-            android:id="@+id/guidelineRight2"
+            android:id="@+id/guidelineRight"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
@@ -29,7 +29,8 @@
             android:layout_height="wrap_content"
             android:text="Synopsis :"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-            app:layout_constraintStart_toStartOf="@id/guidelineLeft2"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="@id/guidelineLeft"
             app:layout_constraintTop_toTopOf="parent" />
 
         <ScrollView
@@ -37,7 +38,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/guidelineLeft2"
+            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
+            app:layout_constraintEnd_toStartOf="@id/guidelineRight"
             app:layout_constraintTop_toBottomOf="@+id/synopsisLabel">
 
             <TextView
@@ -52,8 +54,8 @@
             android:layout_height="wrap_content"
             app:barrierDirection="bottom"
             app:constraint_referenced_ids="synopsisLabel,synopsis_ScrollView"
-            app:layout_constraintEnd_toEndOf="@id/guidelineRight2"
-            app:layout_constraintStart_toStartOf="@id/guidelineLeft2"
+            app:layout_constraintEnd_toEndOf="@id/guidelineRight"
+            app:layout_constraintStart_toStartOf="@id/guidelineLeft"
             app:layout_constraintTop_toBottomOf="@id/synopsis_ScrollView" />
 
         <include
@@ -61,9 +63,9 @@
             layout="@layout/review_label_item"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            app:layout_constraintEnd_toEndOf="@id/guidelineRight2"
-            app:layout_constraintStart_toStartOf="@id/guidelineLeft2"
+            android:layout_marginTop="@dimen/dimen_8dp"
+            app:layout_constraintEnd_toEndOf="@id/guidelineRight"
+            app:layout_constraintStart_toStartOf="@id/guidelineLeft"
             app:layout_constraintTop_toTopOf="@+id/barrier2" />
 
         <android.support.v7.widget.RecyclerView
@@ -76,8 +78,8 @@
             android:nestedScrollingEnabled="false"
             android:visibility="gone"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
-            app:layout_constraintEnd_toEndOf="@id/guidelineRight2"
-            app:layout_constraintStart_toStartOf="@id/guidelineLeft2"
+            app:layout_constraintEnd_toEndOf="@id/guidelineRight"
+            app:layout_constraintStart_toStartOf="@id/guidelineLeft"
             app:layout_constraintTop_toBottomOf="@+id/reviewLabelContainer" />
 
 
