--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="colorReviewItem">#F3F3F9</color>
+    <color name="colorReviewItemDark">#E8E8F4</color>
 </resources>
