--- a/app/src/main/res/layout-land/activity_movie_detail.xml
+++ b/app/src/main/res/layout-land/activity_movie_detail.xml
@@ -7,138 +7,151 @@
 
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:fillViewport="true"
         >
 
-        <android.support.constraint.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            tools:context=".ui.MovieDetailActivity">
+<android.support.constraint.ConstraintLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    tools:context=".ui.MovieDetailActivity">
 
-            <android.support.constraint.Guideline
-                android:id="@+id/guidelineLeft"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                app:layout_constraintGuide_begin="@dimen/dimen_8dp" />
+    <android.support.constraint.Guideline
+        android:id="@+id/guidelineTop"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_begin="8dp" />
 
-            <android.support.constraint.Guideline
-                android:id="@+id/guidelineRight"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                app:layout_constraintGuide_end="@dimen/dimen_8dp" />
+    <android.support.constraint.Guideline
+        android:id="@+id/guidelineLeft"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="8dp" />
 
-            <android.support.constraint.Guideline
-                android:id="@+id/guidelineTop"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                app:layout_constraintGuide_begin="@dimen/dimen_8dp" />
+    <android.support.constraint.Guideline
+        android:id="@+id/guidelineRight"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_end="8dp" />
 
-            <ImageView
-                android:id="@+id/iv_backgroundImage"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:adjustViewBounds="true"
-                android:contentDescription="@string/background_image"
-                android:visibility="gone" />
+    <android.support.constraint.Barrier
+        android:id="@+id/barrierVertical"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:barrierDirection="right"
+        app:constraint_referenced_ids="iv_posterImage"
+        app:layout_constraintTop_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/barrierHorizontal"
+        app:layout_constraintStart_toEndOf="@id/iv_posterImage"
+        />
 
-            <ImageView
-                android:id="@+id/iv_posterImage"
-                android:layout_width="wrap_content"
-                android:layout_height="231dp"
-                android:adjustViewBounds="true"
-                android:contentDescription="@string/poster_image"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="@id/guidelineLeft"
-                app:layout_constraintTop_toTopOf="@+id/guidelineTop"
-                app:layout_constraintVertical_bias="0.0" />
+    <android.support.constraint.Barrier
+        android:id="@+id/barrierHorizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:barrierDirection="bottom"
+        app:constraint_referenced_ids="iv_posterImage"
+        app:layout_constraintTop_toBottomOf="@id/iv_posterImage"
+        app:layout_constraintStart_toEndOf="@id/guidelineLeft"
+        />
 
-            <TextView
-                android:id="@+id/tv_title"
-                tools:text="Black Panther"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="8dp"
-                android:textAlignment="viewStart"
-                android:textSize="24sp"
-                android:textStyle="bold"
-                app:layout_constraintStart_toEndOf="@+id/iv_posterImage"
-                app:layout_constraintEnd_toStartOf="@+id/like_button"
-                app:layout_constraintTop_toTopOf="@+id/guidelineTop" />
+    <ImageView
+        android:id="@+id/iv_backgroundImage"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:visibility="gone" />
 
-            <com.like.LikeButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:icon_type="heart"
-                app:icon_size="32dp"
-                android:id="@+id/like_button"
-                app:circle_start_color="@color/colorPrimary"
-                app:circle_end_color="@color/colorAccent"
-                app:dots_primary_color="@color/colorAccent"
-                app:dots_secondary_color="@color/colorPrimary"
-                app:liked="false"
-                app:anim_scale_factor="2"
-                app:is_enabled="true"
-                app:layout_constraintStart_toEndOf="@+id/tv_title"
-                app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
-                app:layout_constraintTop_toTopOf="parent"
-                />
+    <ImageView
+        android:id="@+id/iv_posterImage"
+        android:layout_width="120dp"
+        android:layout_height="180dp"
+        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
+        app:layout_constraintTop_toTopOf="@+id/guidelineTop"
+        app:srcCompat="@drawable/poster" />
 
-            <RatingBar
-                android:id="@+id/ratingBar"
-                style="@style/Widget.AppCompat.RatingBar.Small"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:isIndicator="true"
-                android:numStars="5"
-                android:rating="5"
-                android:stepSize="0.1"
-                app:layout_constraintStart_toStartOf="@+id/tv_title"
-                app:layout_constraintTop_toBottomOf="@+id/tv_title" />
+    <TextView
+        android:id="@+id/tv_title"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:text="TextView"
+        android:textAlignment="viewStart"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toEndOf="@+id/barrierVertical"
+        app:layout_constraintEnd_toStartOf="@id/like_button"
+        app:layout_constraintTop_toTopOf="@+id/guidelineTop" />
 
-            <TextView
-                android:id="@+id/tv_releaseDate"
-                tools:text="12-12-2018"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="8dp"
-                app:layout_constraintStart_toEndOf="@+id/ratingBar"
-                app:layout_constraintTop_toBottomOf="@+id/tv_title"
-                />
+    <com.like.LikeButton
+        android:id="@+id/like_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:icon_type="heart"
+        app:icon_size="32dp"
+        app:circle_start_color="@color/colorPrimary"
+        app:circle_end_color="@color/colorAccent"
+        app:dots_primary_color="@color/colorAccent"
+        app:dots_secondary_color="@color/colorPrimary"
+        app:liked="false"
+        app:anim_scale_factor="2"
+        app:is_enabled="true"
+        app:layout_constraintStart_toEndOf="@+id/tv_title"
+        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
+        app:layout_constraintTop_toBottomOf="@id/tv_title"
+        app:layout_constraintBottom_toTopOf="@id/tv_title"
+        />
 
-            <android.support.constraint.Barrier
-                android:id="@+id/barrier1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:barrierDirection="bottom"
-                app:constraint_referenced_ids="ratingBar, tv_releaseDate"
-                app:layout_constraintTop_toBottomOf="@+id/ratingBar"
-                />
+    <android.support.constraint.Barrier
+        android:id="@+id/barrier1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:barrierDirection="bottom"
+        app:constraint_referenced_ids="like_button, tv_title"
+        app:layout_constraintTop_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@id/barrierVertical"
+        />
 
-            <android.support.constraint.Barrier
-                android:id="@+id/barrier2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:barrierDirection="right"
-                app:constraint_referenced_ids="iv_posterImage"
-                app:layout_constraintStart_toEndOf="@id/iv_posterImage"/>
+    <RatingBar
+        android:id="@+id/ratingBar"
+        style="@style/Widget.AppCompat.RatingBar.Small"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:isIndicator="true"
+        android:numStars="5"
+        android:rating="5"
+        android:stepSize="0.1"
+        app:layout_constraintStart_toStartOf="@+id/tv_title"
+        app:layout_constraintTop_toBottomOf="@+id/tv_title" />
 
-            <include
-                android:id="@+id/itemDetails"
-                layout="@layout/movie_overview_layout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_constraintEnd_toStartOf="@id/guidelineRight"
-                app:layout_constraintStart_toEndOf="@+id/barrier2"
-                app:layout_constraintTop_toBottomOf="@+id/barrier1" />
+    <TextView
+        android:id="@+id/tv_releaseDate"
+        tools:text="12-12-2018"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintStart_toEndOf="@+id/ratingBar"
+        app:layout_constraintTop_toBottomOf="@+id/tv_title"
+        />
 
-        </android.support.constraint.ConstraintLayout>
+    <include
+        android:id="@+id/itemDetails"
+        layout="@layout/movie_overview_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/dimen_8dp"
+        android:textStyle="bold"
+        app:layout_constraintTop_toBottomOf="@+id/barrierHorizontal"
+        app:layout_constraintStart_toEndOf="@id/guidelineLeft"
+        app:layout_constraintEnd_toEndOf="@id/guidelineRight"
+        />
+
+</android.support.constraint.ConstraintLayout>
 
     </android.support.v4.widget.NestedScrollView>
+
 </layout>
