--- a/app/src/main/res/layout/grid_item_view.xml
+++ b/app/src/main/res/layout/grid_item_view.xml
@@ -10,20 +10,28 @@
     android:layout_height="wrap_content"
     >
 
-<FrameLayout
-
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        app:cardCornerRadius="4dp"
+        app:cardElevation="4dp"
+        app:cardUseCompatPadding="true"
+        app:cardPreventCornerOverlap="true"
+        app:layout_constraintTop_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
 
     <ImageView
         android:id="@+id/iv_posterImage"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="8dp"
         android:adjustViewBounds="true"
         android:contentDescription="@string/poster_image" />
 
-</FrameLayout>
+    </android.support.v7.widget.CardView>
+
 </ScrollView>
 
 </layout>
