feature- movie videos

--- a/app/src/main/res/layout/videos_list_item.xml
+++ b/app/src/main/res/layout/videos_list_item.xml
@@ -10,13 +10,12 @@
     android:layout_height="wrap_content">
 
     <android.support.v7.widget.CardView
-        android:layout_width="300dp"
+        android:layout_width="match_parent"
         android:layout_height="200dp"
         android:layout_gravity="center"
         app:cardCornerRadius="3dp"
         app:cardElevation="3dp"
         app:cardUseCompatPadding="true"
-        app:cardPreventCornerOverlap="true"
         app:layout_constraintTop_toBottomOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -24,9 +23,15 @@
 
         <ImageView
             android:id="@+id/setTrailerImage"
+            android:adjustViewBounds="true"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:src="@drawable/ic_round_play_circle_outline_24px"/>
 
     </android.support.v7.widget.CardView>
 
