--- a/app/src/main/res/layout/movie_overview_layout.xml
+++ b/app/src/main/res/layout/movie_overview_layout.xml
@@ -58,6 +58,30 @@
             app:layout_constraintStart_toStartOf="@id/guidelineLeft"
             app:layout_constraintTop_toBottomOf="@id/synopsis_ScrollView" />
 
+        <TextView
+            android:id="@+id/label_trailer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Trailers"
+            android:textStyle="bold"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
+            app:layout_constraintTop_toBottomOf="@+id/barrier2"
+            app:layout_constraintBottom_toTopOf="@id/movieTrailersList"/>
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/movieTrailersList"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:clickable="true"
+            android:background="@android:color/transparent"
+            android:isScrollContainer="true"
+            android:nestedScrollingEnabled="false"
+            app:layout_constraintEnd_toStartOf="@id/guidelineRight"
+            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
+            app:layout_constraintTop_toBottomOf="@+id/label_trailer"/>
+
         <include
             android:id="@+id/reviewContainer"
             layout="@layout/review_container"
@@ -66,7 +90,7 @@
             android:layout_marginTop="@dimen/dimen_8dp"
             app:layout_constraintEnd_toEndOf="@id/guidelineRight"
             app:layout_constraintStart_toStartOf="@id/guidelineLeft"
-            app:layout_constraintTop_toBottomOf="@+id/barrier2" />
+            app:layout_constraintTop_toBottomOf="@+id/movieTrailersList" />
 
 
     </android.support.constraint.ConstraintLayout>
