UI-fragment to show recipes, adapter, fixes

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#bf894e</color>
+    <color name="colorPrimaryDark">#a34f06</color>
+    <color name="colorAccent">#ecd693</color>
 </resources>
