--- a/app/src/main/res/layout/recipe_item_view.xml
+++ b/app/src/main/res/layout/recipe_item_view.xml
@@ -7,6 +7,7 @@
     >
 
 <android.support.design.card.MaterialCardView
+    android:id="@+id/cardView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
