--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#bf894e</color>
     <color name="colorPrimaryDark">#a34f06</color>
     <color name="colorAccent">#ecd693</color>
+
+    <color name="lightGrey">#f6d4d0d0</color>
+
 </resources>
