--- a/app/src/main/res/layout/fragment_recipe_detail_list.xml
+++ b/app/src/main/res/layout/fragment_recipe_detail_list.xml
@@ -14,8 +14,6 @@
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Ingredients : "
-        android:background="@color/colorAccent"
         android:textAppearance="@style/TextAppearance.AppCompat.Title"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
@@ -23,10 +21,9 @@
         />
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/ingredientsList"
+        android:id="@+id/recipeDetailsList"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:background="@color/colorAccent"
         android:padding="8dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
