--- a/app/src/main/res/layout/fragment_single_step.xml
+++ b/app/src/main/res/layout/fragment_single_step.xml
@@ -11,8 +11,10 @@
 
         <com.google.android.exoplayer2.ui.PlayerView
             android:id="@+id/playerView"
-            android:layout_width="match_parent"
-            android:layout_height="400dp"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            android:fitsSystemWindows="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
@@ -21,10 +23,11 @@
 
         <ImageView
             android:id="@+id/placeholderImage"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
             android:layout_margin="48dp"
             android:src="@drawable/ic_no_video"
+            android:fitsSystemWindows="true"
             android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -43,6 +46,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
+            android:lineSpacingExtra="1dp"
+            android:textSize="18sp"
             android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
