navigation, fixes, persistance

--- a/app/src/main/res/layout-land/fragment_single_step.xml
+++ b/app/src/main/res/layout-land/fragment_single_step.xml
@@ -12,8 +12,8 @@
 
         <com.google.android.exoplayer2.ui.PlayerView
             android:id="@+id/playerView"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:visibility="gone"
             android:fitsSystemWindows="true"
             app:layout_constraintEnd_toEndOf="parent"
@@ -49,6 +49,7 @@
             android:layout_margin="8dp"
             android:lineSpacingExtra="2dp"
             android:textSize="20sp"
+            android:visibility="gone"
             android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -59,6 +60,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:barrierDirection="bottom"
+            android:visibility="gone"
             app:constraint_referenced_ids="stepDescription"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -71,6 +73,7 @@
             android:background="@color/colorPrimary"
             android:layout_marginTop="@dimen/dimen_48dp"
             android:onClick="nextButton"
+            android:visibility="gone"
             app:srcCompat="@drawable/ic_round_arrow_forward_24px"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/stepDescription"
@@ -82,6 +85,7 @@
             android:layout_height="@dimen/dimen_48dp"
             android:textSize="18sp"
             android:textStyle="bold"
+            android:visibility="gone"
             android:gravity="center_horizontal|center_vertical"
             app:layout_constraintStart_toEndOf="@id/prevStep"
             app:layout_constraintEnd_toStartOf="@id/nextStep"
@@ -95,6 +99,7 @@
             android:background="@color/colorPrimary"
             android:layout_marginTop="@dimen/dimen_48dp"
             android:onClick="prevButton"
+            android:visibility="gone"
             app:srcCompat="@drawable/ic_round_arrow_back_24px"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/stepDescription"
